# add_subdirectory(Algorithms)
add_subdirectory(Crossovers)
add_subdirectory(Decompositions)
add_subdirectory(Individual)
add_subdirectory(Mutations)
add_subdirectory(Problems)
add_subdirectory(Repairs)
add_subdirectory(Rng)
add_subdirectory(Samplings)
add_subdirectory(Selections)
add_subdirectory(Utils)